--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 width="370"
                 height="294"
               />
-              <div class="activities-images-description">Десктопные приложения</div>
+              <div class="activities-images-description"><p>Десктопные приложения</p></div>
             </li>
             <li class="activities-images-item">
               <img
@@ -147,7 +147,7 @@
                 width="370"
                 height="294"
               />
-              <div class="activities-images-description">Мобильные приложения</div>
+              <div class="activities-images-description"><p>Мобильные приложения</p></div>
             </li>
             <li class="activities-images-item">
               <img
@@ -156,7 +156,7 @@
                 width="370"
                 height="294"
               />
-              <div class="activities-images-description">Дизайнерские решения</div>
+              <div class="activities-images-description"><p>Дизайнерские решения</p></div>
             </li>
           </ul>
         </div>
