--- a/portfolio.html
+++ b/portfolio.html
@@ -98,13 +98,20 @@
               
             </li>
             <li class="portfolio-content">
-              <a href="#"
+              <a class="overlay-test" href="#"
                 ><img
                   src="./images/basketball.jpg"
                   alt="basketball poster"
                   width="370"
                   height="294"
                 />
+                <div class="overlay">
+                  <div class="overlay-info">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.
+                  </div>
+                </div>
                 <div class="content-description">
                   <h2>Постер New Orlean vs Golden Star</h2>
                   <p>Дизайн</p>
@@ -112,13 +119,20 @@
               </a>
             </li>
             <li class="portfolio-content">
-              <a href="#"
+              <a class="overlay-test" href="#"
                 ><img
                   src="./images/seafood.jpg"
                   alt="restaurant app"
                   width="370"
                   height="294"
                 />
+                <div class="overlay">
+                  <div class="overlay-info">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.
+                  </div>
+                </div>
                 <div class="content-description">
                   <h2>Ресторан Seafood</h2>
                   <p>Приложение</p>
@@ -126,13 +140,20 @@
               </a>
             </li>
             <li class="portfolio-content">
-              <a href="#"
+              <a class="overlay-test" href="#"
                 ><img
                   src="./images/headphones.jpg"
                   alt="headphones"
                   width="370"
                   height="294"
                 />
+                <div class="overlay">
+                  <div class="overlay-info">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.
+                  </div>
+                </div>
                 <div class="content-description">
                   <h2>Проект Prime</h2>
                   <p>Маркетинг</p>
@@ -140,13 +161,20 @@
               </a>
             </li>
             <li class="portfolio-content">
-              <a href="#"
+              <a class="overlay-test" href="#"
                 ><img
                   src="./images/boxes.jpg"
                   alt="boxes"
                   width="370"
                   height="294"
                 />
+                <div class="overlay">
+                  <div class="overlay-info">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.
+                  </div>
+                </div>
                 <div class="content-description">
                   <h2>Проект Boxes</h2>
                   <p>Приложение</p>
@@ -154,13 +182,20 @@
               </a>
             </li>
             <li class="portfolio-content">
-              <a href="#"
+              <a class="overlay-test" href="#"
                 ><img
                   src="./images/desktop-screen.jpg"
                   alt="desktop"
                   width="370"
                   height="294"
                 />
+                <div class="overlay">
+                  <div class="overlay-info">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.
+                  </div>
+                </div>
                 <div class="content-description">
                   <h2>Inspiration has no Borders</h2>
                   <p>Веб-сайт</p>
@@ -168,13 +203,20 @@
               </a>
             </li>
             <li class="portfolio-content">
-              <a href="#"
+              <a class="overlay-test" href="#"
                 ><img
                   src="./images/book.jpg"
                   alt="book design"
                   width="370"
                   height="294"
                 />
+                <div class="overlay">
+                  <div class="overlay-info">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.
+                  </div>
+                </div>
                 <div class="content-description">
                   <h2>Издание Limited Edition</h2>
                   <p>Дизайн</p>
@@ -182,13 +224,20 @@
               </a>
             </li>
             <li class="portfolio-content">
-              <a href="#"
+              <a class="overlay-test" href="#"
                 ><img
                   src="./images/tag.jpg"
                   alt="tag"
                   width="370"
                   height="294"
                 />
+                <div class="overlay">
+                  <div class="overlay-info">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.
+                  </div>
+                </div>
                 <div class="content-description">
                   <h2>Проект LAB</h2>
                   <p>Маркетинг</p>
@@ -196,13 +245,20 @@
               </a>
             </li>
             <li class="portfolio-content">
-              <a href="#"
+              <a class="overlay-test" href="#"
                 ><img
                   src="./images/laptop.jpg"
                   alt="laptop"
                   width="370"
                   height="294"
                 />
+                <div class="overlay">
+                  <div class="overlay-info">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.
+                  </div>
+                </div>
                 <div class="content-description">
                   <h2>Growing Business</h2>
                   <p>Приложение</p>
