--- a/portfolio.html
+++ b/portfolio.html
@@ -85,9 +85,11 @@
                 />  
                 <div class="overlay">
                   <div class="overlay-info">
-                    Технокряк это современная площадка распространения коронавируса. Компании
-                    используют эту платформу для цифрового
-                    шпионажа и атак на защищённые сервера конкурентов.
+                    <p class="overlay-text">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового
+                      шпионажа и атак на защищённые сервера конкурентов.
+                    </p>
                   </div>
                 </div>
                 <div class="content-description">
@@ -107,9 +109,11 @@
                 />
                 <div class="overlay">
                   <div class="overlay-info">
-                    Технокряк это современная площадка распространения коронавируса. Компании
-                    используют эту платформу для цифрового
-                    шпионажа и атак на защищённые сервера конкурентов.
+                    <p class="overlay-text">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового
+                      шпионажа и атак на защищённые сервера конкурентов.
+                    </p>
                   </div>
                 </div>
                 <div class="content-description">
@@ -128,9 +132,11 @@
                 />
                 <div class="overlay">
                   <div class="overlay-info">
-                    Технокряк это современная площадка распространения коронавируса. Компании
-                    используют эту платформу для цифрового
-                    шпионажа и атак на защищённые сервера конкурентов.
+                    <p class="overlay-text">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового
+                      шпионажа и атак на защищённые сервера конкурентов.
+                    </p>
                   </div>
                 </div>
                 <div class="content-description">
@@ -149,9 +155,11 @@
                 />
                 <div class="overlay">
                   <div class="overlay-info">
-                    Технокряк это современная площадка распространения коронавируса. Компании
-                    используют эту платформу для цифрового
-                    шпионажа и атак на защищённые сервера конкурентов.
+                    <p class="overlay-text">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового
+                      шпионажа и атак на защищённые сервера конкурентов.
+                    </p>
                   </div>
                 </div>
                 <div class="content-description">
@@ -170,9 +178,11 @@
                 />
                 <div class="overlay">
                   <div class="overlay-info">
-                    Технокряк это современная площадка распространения коронавируса. Компании
-                    используют эту платформу для цифрового
-                    шпионажа и атак на защищённые сервера конкурентов.
+                    <p class="overlay-text">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового
+                      шпионажа и атак на защищённые сервера конкурентов.
+                    </p>
                   </div>
                 </div>
                 <div class="content-description">
@@ -191,9 +201,11 @@
                 />
                 <div class="overlay">
                   <div class="overlay-info">
-                    Технокряк это современная площадка распространения коронавируса. Компании
-                    используют эту платформу для цифрового
-                    шпионажа и атак на защищённые сервера конкурентов.
+                    <p class="overlay-text">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового
+                      шпионажа и атак на защищённые сервера конкурентов.
+                    </p>
                   </div>
                 </div>
                 <div class="content-description">
@@ -212,9 +224,11 @@
                 />
                 <div class="overlay">
                   <div class="overlay-info">
-                    Технокряк это современная площадка распространения коронавируса. Компании
-                    используют эту платформу для цифрового
-                    шпионажа и атак на защищённые сервера конкурентов.
+                    <p class="overlay-text">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового
+                      шпионажа и атак на защищённые сервера конкурентов.
+                    </p>
                   </div>
                 </div>
                 <div class="content-description">
@@ -233,9 +247,11 @@
                 />
                 <div class="overlay">
                   <div class="overlay-info">
-                    Технокряк это современная площадка распространения коронавируса. Компании
-                    используют эту платформу для цифрового
-                    шпионажа и атак на защищённые сервера конкурентов.
+                    <p class="overlay-text">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового
+                      шпионажа и атак на защищённые сервера конкурентов.
+                    </p>
                   </div>
                 </div>
                 <div class="content-description">
@@ -254,9 +270,11 @@
                 />
                 <div class="overlay">
                   <div class="overlay-info">
-                    Технокряк это современная площадка распространения коронавируса. Компании
-                    используют эту платформу для цифрового
-                    шпионажа и атак на защищённые сервера конкурентов.
+                    <p class="overlay-text">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового
+                      шпионажа и атак на защищённые сервера конкурентов.
+                    </p>
                   </div>
                 </div>
                 <div class="content-description">
